--- a/Ejercicio 1/CMakeLists.txt
+++ b/Ejercicio 1/CMakeLists.txt
@@ -3,4 +3,5 @@ project(Ejercicio_1)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(representacion main.cpp)
+add_executable(representacion main.cpp) #Ejercicio 1 segun los apuntes
+add_executable(representacion2 main2.cpp) #Ejercicio 2 segun los ejercicios
